# gnu-xnee

./: AUTHORS  BUGS  COPYING  ChangeLog  DESCRIPTION  DEVELOPMENT  EXAMPLES  FAQ  INSTALL  MANUAL  Makefile.am  Makefile.cvs  Makefile.devel  Makefile.xnee  NEWS  README  README.cvs  README.debian  TODO  USAGE  Xnee.files  Xnee.includes  build.sh  build_web.sh  config.h.in  config.xnee  configure.in  maint.mk  mkinstalldirs  tmpfile
cnee/: Makefile.am  Makefile.cnee  Makefile.cvs  NEWS  configure.in
cnee/include/: cnee.h  cnee_demo.h  cnee_fake.h  cnee_printer.h  cnee_strings.h  parse.h
cnee/src/: Makefile.am  cnee_demo.c  cnee_fake.c  cnee_printer.c  cnee_strings.c  main.c  parse.c  parse.h
cnee/test/: check_mem.sh  run_cnee  test_all.sh
cnee/test/etc/: base_funs
cnee/test/record/: keyboard.sh  mouse.sh
cnee/test/scripts/grab/: p_r_s.sh  stop.sh
cnee/test/scripts/options/: all-events.sh  print-error-name.sh  print-error-names.sh  print-event-name-human.sh  print-event-name.sh  print-event-names.sh  print-request-name-human.sh  print-request-name.sh  print-request-names.sh
cnee/test/scripts/record/: keyboard.sh  mouse.sh  server_times.sh
cnee/test/scripts/replay/: keyboard.sh  mouse.sh
cnee/test/scripts/resolution/: mo-res.sh
cnee/test/scripts/retype/: keyboard.sh  onefile.txt
cnee/test/scripts/scripting/: gen_test.sh
cnee/test/scripts/timing/: mo-time.sh
cnee/test/src/: Makefile  xgetter.c
devel-scripts/: setup-xi2.sh
doc/: ChangeLog  Makefile.am  NEWS  README  configure.in  fdl.texi  gen_faq.sh  version.texi  xndetail.dia  xnee.1  xnee.dox  xnee.texi  xnee_copying  xnee_exampl.texi  xnee_faq.texi  xnee_func.texi  xnee_general.texi  xnee_install.texi  xnee_intern.texi  xnee_intro.texi  xnee_progs.texi  xnee_prot.texi  xnee_req.texi  xnee_start.texi  xnee_synch.texi  xnee_usage.texi  xngener.dia  xnrep.dia  xnswinp.dia
doc/pics/: dia_gen.sh  xnrec.dia
examples/: Makefile.am  simple_bash.sh  simple_bash.sh.in1
gnee/: AUTHORS  Makefile.am  Makefile.cvs  configure.in  gnee.glade  gnee.gladep
gnee/man/: Makefile.am  gnee.1.in
gnee/src/: Makefile.am  Makefile.test  callbacks.c  callbacks.h  getstrings.c  gnee_xnee.c  gnee_xnee.h  interface.c  interface.h  main.c  recordables.c  recordables.h
libxnee/: ChangeLog  Makefile.am  Makefile.libxnee  NEWS  configure.in
libxnee/doc/: Makefile.am  dev_version.texi  mdate-sh  xnee.dox  xnee_devel_build.texi  xnee_devel_down.texi  xnee_devel_over.texi  xnee_develop.texi
libxnee/include/libxnee/: datastrings.h  feedback.h  print.h  print_varargs.h  x11_files.h  xnee.h  xnee_alloc.h  xnee_buffer.h  xnee_callback.h  xnee_display.h  xnee_dl.h  xnee_error.h  xnee_expr.h  xnee_fake.h  xnee_fileop.h  xnee_grab.h  xnee_internal.h  xnee_keysym.h  xnee_km.h  xnee_plugin.h  xnee_range.h  xnee_record.h  xnee_replay.h  xnee_resolution.h  xnee_resource.h  xnee_sem.h  xnee_session.h  xnee_setget.h  xnee_settings.h  xnee_strings.h  xnee_threshold.h  xnee_time.h  xnee_utils.h  xnee_window.h  xnee_xinput.h
libxnee/src/: Makefile.am  Makefile.in  datastrings.c  feedback.c  print.c  print_varargs.c  xnee.c  xnee_alloc.c  xnee_buffer.c  xnee_callback.c  xnee_display.c  xnee_dl.c  xnee_error.c  xnee_expr.c  xnee_fake.c  xnee_fileop.c  xnee_grab.c  xnee_keysym.c  xnee_km.c  xnee_plugin.c  xnee_range.c  xnee_record.c  xnee_replay.c  xnee_resolution.c  xnee_resource.c  xnee_sem.c  xnee_session.c  xnee_setget.c  xnee_settings.c  xnee_strings.c  xnee_threshold.c  xnee_time.c  xnee_utils.c  xnee_window.c  xnee_xinput.c
libxnee/test/: Makefile  Makefile.am  callback.c  callback_so.c  disp.c  libtest.c  print.c  test-wrapper.sh  test_all.c  test_feedback.c  test_setget.c  test_setget.h
man/: Makefile.am  xnee.1.in
pixmap/: Makefile.am  xnee.xpm
pnee/: Makefile.am  autogen.sh  configure.in  pnee.glade  pnee.gladep
pnee/data/: pnee.server  pnee.server.in
pnee/man/: Makefile.am  pnee.1.in
pnee/pics/: Makefile.am
pnee/src/: Makefile.am  callbacks.c  callbacks.h  interface.c  interface.h  main.c  pnee_impl.c  pnee_impl.h  pnee_types.h
resources/: netscape.xns  xnee.xns
sessions/: Makefile.am  example1.xns
share/: Makefile.am  xnee.sh  xnee.sh.in1  xnee.sh.in2
xnee/: Makefile.am  Makefile.xnee  NEWS  configure.in
xnee/doc/: Makefile.am  fdl.texi  mdate-sh  texinfo.tex  version.texi  xnee.texi  xnee_copying  xnee_exampl.texi  xnee_faq.texi  xnee_general.texi  xnee_install.texi  xnee_intern.texi  xnee_intro.texi  xnee_req.texi  xnee_start.texi  xnee_synch.texi  xnee_usage.texi
xnee/src/: Makefile.am  main.c  parse.c  parse.h
xnee/test/: test_all.sh
xnee/test/etc/: base_funs
xnee/test/record/: keyboard.sh  mouse.sh
xnee/test/scripts/options/: all-events.sh  print-error-name.sh  print-error-names.sh  print-event-name.sh  print-event-names.sh  print-request-name.sh  print-request-names.sh  test_all.sh
xnee/test/scripts/record/: keyboard.sh  mouse.sh
xnee/test/scripts/replay/: keyboard.sh  mouse.sh
xnee/test/scripts/resolution/: mo-res.sh
xnee/test/scripts/timing/: mo-time.sh
xneetest/: README  test_xnee.sh
xneetest/TestGui/: AUTHORS  COPYING  README  testgui.glade
xneetest/TestGui/src/: Makefile.am  callbacks.c  callbacks.h  interface.c  main.c  utils.c  utils.h
xneetest/sessions/: test1.xns
xswine/: main.c
